src/app/components/ExperienceBox/ExperienceBox.module.css
.card {
    margin-top: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
    gap: 1rem;
    background-color: rgb(247, 247, 247);
    border-radius: 10px;
    padding: 10px;
    width: 100%;
    transition: all 0.2s ease-in;
}

.card:hover {
    transition: all 0.2s ease-in;
    background-color: rgb(238, 238, 238);
}

.img {
    border-radius: 10px;
    width: 20%;
    height: 20%;
}

.bg {
    display: flex;
    flex-direction: column;
    align-items: start;
}

.title {
    font-weight: bold !important;
    font-size: small !important;
    color: black !important;
    margin: 0 !important;
    padding: 0 !important;
}

.bg p {
    font-size: small;
    margin: 0;
}

.dates {
    color: rgb(70, 70, 70) !important;
    font-size: x-small !important;
}

@media only screen and (min-width: 768px) {
    /* For desktop: */
    
    .img {
        border-radius: 10px;
        width: 3.5rem;
        height: 3.5rem;
    }
    
    .bg {
        display: flex;
        flex-direction: column;
        align-items: start;
    }
}

@media screen and (min-width: 1600px) {
    /* For big screens: */
}

